--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "how-to-learn",
   "version": "1.0.0",
   "description": "",
+  "homepage": "https://maximkaschitskiy.github.io/how-to-learn/",
   "scripts": {
     "start": "parcel serve src/index.html",
     "build": "parcel build src/index.html",
@@ -17,7 +18,6 @@
   "bugs": {
     "url": "https://github.com/maximKaschitskiy/how-to-learn/issues"
   },
-  "homepage": "https://github.com/maximKaschitskiy/how-to-learn#readme",
   "dependencies": {
     "gh-pages": "^5.0.0",
     "parcel": "^2.8.3"
