--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "homepage": "https://maximkaschitskiy.github.io/how-to-learn/",
+  "private": false,
   "scripts": {
     "start": "parcel serve src/index.html",
     "build": "parcel build src/index.html",
